en/2.x/_sources/operations/upstart.rst.txt
Upstart Operations
------------------


Manage upstart services.

:code:`upstart.service`
~~~~~~~~~~~~~~~~~~~~~~~

Manage the state of upstart managed services.

.. code:: python

    upstart.service(service, running=True, restarted=False, reloaded=False, command=None, enabled=None)

+ **service**: name of the service to manage
+ **running**: whether the service should be running
+ **restarted**: whether the service should be restarted
+ **reloaded**: whether the service should be reloaded
+ **command**: custom command to pass like: ``/etc/rc.d/<service> <command>``
+ **enabled**: whether this service should be enabled/disabled on boot

Enabling/disabling services:
    Upstart jobs define runlevels in their config files - as such there is no way to
    edit/list these without fiddling with the config. So pyinfra simply manages the
    existence of a ``/etc/init/<service>.override`` file, and sets its content to
    "manual" to disable automatic start of services.

