en/3.x/_sources/operations/upstart.rst.txt
Upstart Operations
------------------


Manage upstart services.


Facts used in these operations: :ref:`facts:upstart.UpstartStatus`.

.. _operations:upstart.service:

:code:`upstart.service`
~~~~~~~~~~~~~~~~~~~~~~~

Manage the state of upstart managed services.

.. code:: python

    upstart.service(
         service: 'str',
         running=True,
         restarted=False,
         reloaded=False,
         command: 'str | None' = None,
         enabled: 'bool | None' = None,
         **kwargs,
    )

+ **service**: name of the service to manage
+ **running**: whether the service should be running
+ **restarted**: whether the service should be restarted
+ **reloaded**: whether the service should be reloaded
+ **command**: custom command to pass like: ``/etc/rc.d/<service> <command>``
+ **enabled**: whether this service should be enabled/disabled on boot

Enabling/disabling services:
    Upstart jobs define runlevels in their config files - as such there is no way to
    edit/list these without fiddling with the config. So pyinfra simply manages the
    existence of a ``/etc/init/<service>.override`` file, and sets its content to
    "manual" to disable automatic start of services.

.. note::
    This operation also inherits all :doc:`global arguments </arguments>`.

